--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
     <div class="container">
+
+        <!-- FORM CONTAINER -->
         <div class="form__box">
             <div class="title">Create Account</div>
             <form class="form">
@@ -30,7 +32,7 @@
                 </div>
                 <div class="form__div">
                     <label class="label">Password <span>*</span></label>
-                    <input type="password" class="password">
+                    <input type="password" class="password" >
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error Message</small>
@@ -44,6 +46,16 @@
                 </div>
                 <button type="submit" class="submit">Submit</button>
             </form>
+        </div>
+
+        <!-- SUCCESS CONTAINER -->
+        <div class="success__container">
+            <div class="success__box">
+                <h2>Registration Successful</h2>
+                <p class="nameOutput"></p>
+                <button class="returneHome">Home</button>
+            </div>
+            <div class="heart_rain"></div>
         </div>
     </div>
 
